# libatbus

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CPPLINT.cfg  LICENSE  LICENSE-Apache.txt  README.md  appveyor.yml  cmake_dev.sh  codecov.yml  libatbus-config.cmake.in
.agents/skills/: README.md
.agents/skills/ai-agent-maintenance/: SKILL.md
.agents/skills/libatbus-protocol-crypto/: SKILL.md
.agents/skills/testing/: SKILL.md
.github/: .cache-key  copilot-instructions.md
.github/codeql/: codeql-config.yml
.github/skills/: README.md  build.md  testing.md
.github/workflows/: clang-tidy.yml  codeql.yml  coveralls.yml  iwyu.yml  linux-macos.yml  linux.yml  macos.yml  main.yml  windows.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/_generated/: libatbus_protocol.pb
_codeql_build_dir/_generated/temp/: libatbus_config.h  libatbus_protocol.pb.cc  libatbus_protocol.pb.h
_codeql_build_dir/lib/cmake/atframe_utils/: atframe_utils-config.cmake  atframe_utils-target.cmake
_codeql_build_dir/lib/cmake/libatbus/: libatbus-config.cmake  libatbus-target.cmake
_codeql_build_dir/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/tools/: CTestTestfile.cmake  Makefile  benchmark_io_stream_channel_recv  benchmark_io_stream_channel_send  benchmark_shm_channel_recv  benchmark_shm_channel_send  cmake_install.cmake  show_shm_channel
atframework/: Repository.cmake
ci/: do_ci.ps1  do_ci.sh  format.sh  install_iwyu.sh
docs/: Build.md  README.md  Schedule.md  Usage.md
docs/experience/: protocol_test.md  test_shm_create.cpp  test_shm_delete.cpp
include/: atbus_connection.h  atbus_connection_context.h  atbus_endpoint.h  atbus_message_handler.h  atbus_msg_handler.h  atbus_node.h  atbus_topology.h  include.macro.cmake  libatbus.h  libatbus_protocol.h  libatbus_protocol.proto
include/detail/: buffer.h  libatbus_adapter_libuv.h  libatbus_channel_export.h  libatbus_channel_types.h  libatbus_config.h.in  libatbus_error.h  libatbus_protocol.fbs  libatbus_protocol.pb  libatbus_protocol.proto
project/cmake/: FetchDependeny.cmake  ProjectBuildOption.cmake
sample/: CMakeLists.txt  sample.custom-macro.cmake  sample_usage_01.cpp
src/: CMakeLists.txt  atbus_connection.cpp  atbus_connection_context.cpp  atbus_endpoint.cpp  atbus_message_handler.cpp  atbus_msg_handler.cpp  atbus_node.cpp  atbus_topology.cpp  channel_io_stream.cpp  channel_mem.cpp  channel_shm.cpp  channel_utility.cpp  libatbus.macro.cmake  libatbus_protocol.cpp
src/detail/: buffer.cpp  libatbus_error.cpp
test/: CMakeLists.txt
test/case/: atbus_access_data_crosslang_generator.cpp  atbus_connection_context_crosslang_generator.cpp  atbus_connection_context_test.cpp  atbus_endpoint_test.cpp  atbus_message_handler_test.cpp  atbus_node_msg_test.cpp  atbus_node_nodesync_test.cpp  atbus_node_reg_test.cpp  atbus_node_relationship_test.cpp  atbus_node_setup_test.cpp  atbus_test_utils.cpp  atbus_test_utils.h  atbus_topology_test.cpp  buffer_test.cpp  channel_io_stream_tcp_test.cpp  channel_io_stream_unix_test.cpp  channel_mem_test.cpp  channel_shm_test.cpp  libatbus_error_test.cpp
test/case/atbus_access_data_crosslang/: full_access_data_custom_command.bytes  full_access_data_custom_command.json  full_access_data_multiple_tokens.bytes  full_access_data_multiple_tokens.json  full_access_data_no_pubkey.bytes  full_access_data_no_pubkey.json  full_access_data_with_pubkey.bytes  full_access_data_with_pubkey.json  index.json  plaintext_custom_command.json  plaintext_no_pubkey.json  plaintext_with_pubkey.json  signature_256bit_token.bytes  signature_256bit_token.json  signature_binary_token.bytes  signature_binary_token.json  signature_simple_token.bytes  signature_simple_token.json
test/case/atbus_connection_context_enc_dec/: compress_lz4_custom_cmd.bytes  compress_lz4_custom_cmd.json  compress_lz4_data_transform_req.bytes  compress_lz4_data_transform_req.json  compress_snappy_custom_cmd.bytes  compress_snappy_custom_cmd.json  compress_snappy_data_transform_req.bytes  compress_snappy_data_transform_req.json  compress_zlib_custom_cmd.bytes  compress_zlib_custom_cmd.json  compress_zlib_data_transform_req.bytes  compress_zlib_data_transform_req.json  compress_zstd_custom_cmd.bytes  compress_zstd_custom_cmd.json  compress_zstd_data_transform_req.bytes  compress_zstd_data_transform_req.json  enc_aes_128_cbc_custom_cmd.bytes  enc_aes_128_cbc_custom_cmd.json  enc_aes_128_cbc_data_transform_req.bytes  enc_aes_128_cbc_data_transform_req.json  enc_aes_128_gcm_custom_cmd.bytes  enc_aes_128_gcm_custom_cmd.json  enc_aes_128_gcm_data_transform_req.bytes  enc_aes_128_gcm_data_transform_req.json  enc_aes_192_cbc_custom_cmd.bytes  enc_aes_192_cbc_custom_cmd.json  enc_aes_192_cbc_data_transform_req.bytes  enc_aes_192_cbc_data_transform_req.json  enc_aes_192_gcm_custom_cmd.bytes  enc_aes_192_gcm_custom_cmd.json  enc_aes_192_gcm_data_transform_req.bytes  enc_aes_192_gcm_data_transform_req.json  enc_aes_256_cbc_custom_cmd.bytes  enc_aes_256_cbc_custom_cmd.json  enc_aes_256_cbc_data_transform_req.bytes  enc_aes_256_cbc_data_transform_req.json  enc_aes_256_gcm_custom_cmd.bytes  enc_aes_256_gcm_custom_cmd.json  enc_aes_256_gcm_data_transform_req.bytes  enc_aes_256_gcm_data_transform_req.json  (+71 more)
tools/: CMakeLists.txt  benchmark_io_stream_channel_recv.cpp  benchmark_io_stream_channel_send.cpp  benchmark_shm_channel_recv.cpp  benchmark_shm_channel_send.cpp  show_shm_channel.cpp  tools.macro.cmake
tools/script/: cppcheck.sh  startup_benchmark_io_stream.sh  startup_benchmark_shm.sh  valgrind_memcheck.sh
